--- a/.github/workflows/SnakeGame.yml
+++ b/.github/workflows/SnakeGame.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
 
     # Checks repo under $GITHUB_WORKSHOP, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: Platane/snk@v2
 
     # Repositorio que será utilizado para gerar os arquivos.
       - uses: Platane/snk@master
