--- a/.github/workflows/SnakeGame.yml
+++ b/.github/workflows/SnakeGame.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
       
     # Generates the snake  
-      - uses: Platane/snk/svg-only@v2
+      - uses: Platane/snk@v2
         id: snake-gif
         with:
           github_user_name: Carla-Franco
@@ -45,7 +45,7 @@ jobs:
           branch: master
           force: true
           
-      - uses: crazy-max/ghaction-github-pages@v2.6.0
+      - uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           # the output branch we mentioned above
           target_branch: output
