--- a/.github/workflows/SnakeGame.yml
+++ b/.github/workflows/SnakeGame.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
       
     # Generates the snake  
-      - uses: Platane/snk@v2
+      - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: Carla-Franco
