--- a/.github/workflows/Cobrinha.yml
+++ b/.github/workflows/Cobrinha.yml
@@ -1,50 +1,42 @@
-# GitHub Action for generating a contribution graph with a snake eating your contributions.
+# Nome da Actions:  
+name: Snake Game
 
-name: Generate Snake
-
-# Controls when the action will run. This action runs every 6 hours.
-
+# Controlador do tempo que sera feito a atualização dos arquivos.
 on:
   schedule:
-      # every 24 hours
-    - cron: "0 */336 * * *"
+      # Será atualizado a cada 5 horas.
+    - cron: "0 */5 * * *"
 
-# This command allows us to run the Action automatically from the Actions tab.
+# Permite executar na na lista de Actions (utilizado para testes de build).
   workflow_dispatch:
 
-# The sequence of runs in this workflow:
+# Regras
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    
+
     # Checks repo under $GITHUB_WORKSHOP, so your job can access it
       - uses: actions/checkout@v2
-      
-    # Generates the snake  
+
+    # Repositorio que será utilizado para gerar os arquivos.
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: Carla-Franco
-          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
+          github_user_name: Carla-Franco #Seu usuario
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
-          
-     # show the status of the build. Makes it easier for debugging (if there's any issues).
+
       - run: git status
-          
-      # Push the changes
+
+      # Para as atualizações.
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: master
           force: true
-          
+
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           # the output branch we mentioned above
