--- a/.github/workflows/Cobrinha.yml
+++ b/.github/workflows/Cobrinha.yml
@@ -17,10 +17,10 @@ jobs:
     steps:
 
     # Checks repo under $GITHUB_WORKSHOP, so your job can access it
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v2
 
     # Repositorio que será utilizado para gerar os arquivos.
-      - uses: ./svg-only
+      - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: Carla-Franco #Seu usuario
@@ -31,13 +31,13 @@ jobs:
 
       # Para as atualizações.
       - name: Push changes
-        uses: ./
+        uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: master
           force: true
 
-      - uses: crazy-max/ghaction-github-pages@v3.1.0
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           # the output branch we mentioned above
           target_branch: output
